使用MySQL数据库

--- a/MyInstagram/app.conf
+++ b/MyInstagram/app.conf
@@ -1,5 +1,5 @@
-#SQLALCHEMY_DATABASE_URI = 'mysql://root:wm4ghd@localhost:3306/test'
-SQLALCHEMY_DATABASE_URI = 'sqlite:///../nowstagram.db'
+SQLALCHEMY_DATABASE_URI = 'mysql+pymysql://root:wm4ghd@localhost:3306/test'
+#SQLALCHEMY_DATABASE_URI = 'sqlite:///../nowstagram.db'
 SQLALCHEMY_TRACK_MODIFICATIONS = True
 ALLOWED_EXT=set(['png','jpg','jpeg','pdf','txt','gif'])
 UPLOAD_DIR='D:/upload/'
